deps/v8/test/message/fail/weak-refs-register2.out
*%(basename)s:9: TypeError: FinalizationRegistry.prototype.register: target and holdings must not be same
fg.register(o, o);
   ^
TypeError: FinalizationRegistry.prototype.register: target and holdings must not be same
    at FinalizationRegistry.register (<anonymous>)
    at *%(basename)s:9:4
